# template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md
.devcontainer/: devtools.txt  install.sh  startup.sh  uv.toml  verify.sh
.devcontainer/python/: Dockerfile  devcontainer.json
.github/: Dockerfile
.github/scripts/: build-publish.sh  configure-uv.sh  get-changed-files.sh  lint-format-test.sh
.github/workflows/: build-and-publish.yml  docker-build-publish.yml  lint-format-test.yml
common/: pyproject.toml
libs/template/: CHANGELOG.md  README.md  pyproject.toml
libs/template/src/tests/: __init__.py
