[project]
name = "template"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <=3.13.1"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../common/pyproject.toml"
